@@ -905,6 +905,8 @@ void WebFrameLoaderClient::didTransferChildFrameToNewDocument()
 
 PassRefPtr<Widget> WebFrameLoaderClient::createPlugin(const IntSize&, HTMLPlugInElement* pluginElement, const KURL& url, const Vector<String>& paramNames, const Vector<String>& paramValues, const String& mimeType, bool loadManually)
 {
+    ASSERT(paramNames.size() == paramValues.size());
+    
     String pluginPath;
 
     // FIXME: In the future, this should return a real CoreIPC connection to the plug-in host, but for now we just
@@ -928,6 +930,14 @@ PassRefPtr<Widget> WebFrameLoaderClient::createPlugin(const IntSize&, HTMLPlugIn
     parameters.values = paramValues;
     parameters.mimeType = mimeType;
     parameters.loadManually = loadManually;
+    
+    // <rdar://problem/8440903>: AppleConnect has a bug where it does not
+    // understand the parameter names specified in the <object> element that
+    // embeds its plug-in. This hack works around the issue by converting the
+    // parameter names to lowercase before passing them to the plug-in.
+    if (equalIgnoringCase(mimeType, "application/x-snkp"))
+        for (size_t i = 0; i < paramNames.size(); ++i)
+            parameters.names[i] = paramNames[i].lower();
 
     RefPtr<Plugin> plugin = NetscapePlugin::create(pluginModule.release());
     return PluginView::create(pluginElement, plugin.release(), parameters);
